Constrain language search typeahead to avoid overflow beyond the page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css";
-@import "~components-font-awesome/css/font-awesome.min.css";
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css';
+@import '~components-font-awesome/css/font-awesome.min.css';
+
+.language-search-typeahead + .dropdown-menu.show {
+  max-height: 500px;
+  overflow-y: auto;
+}
